package ui;

import core.Post;
import java.io.IOException;
import java.net.URL;
import java.util.ResourceBundle;
import javafx.beans.binding.Bindings;
import javafx.fxml.FXML;
import javafx.fxml.Initializable;
import javafx.scene.control.Button;
import javafx.scene.control.Label;
import javafx.scene.control.TextArea;
import javafx.scene.input.KeyCode;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Component;
import service.PostService;

// This JavaDoc comment was generated by Github Copilot
/**
 * Controller for creating new posts. Handles text input, validation, and
 * publishing.
 */
@Component
public class MakeNewPostController implements Initializable {
  @Autowired
  private PostService postService;

  @FXML
  private TextArea postText;

  @FXML
  private Button publishBtn;

  @FXML
  private Button backBtn;

  @FXML
  private Label charCount;

  // This method is generated by openAI GPT-5
  // This JavaDoc comment was generated by Github Copilot
  /**
   * Initializes the UI, disables publish button if invalid, shows live character
   * count, and sets up Enter key to fire the publish button when focused.
   */
  @Override
  public void initialize(URL url, ResourceBundle rb) {
    // disable + dim button when invalid
    var tooLong = postText.textProperty().length().greaterThan(Post.MAX_CONTENT_LENGTH);
    var blank = Bindings.createBooleanBinding(
        () -> postText.getText() == null || postText.getText().isBlank(), postText.textProperty());

    publishBtn.disableProperty().bind(blank.or(tooLong));
    publishBtn.opacityProperty()
        .bind(Bindings.when(publishBtn.disableProperty()).then(0.5).otherwise(1.0));

    // live counter
    charCount.textProperty()
        .bind(Bindings.format("%d/%d", postText.textProperty().length(), Post.MAX_CONTENT_LENGTH));

    // turn counter red + add red border when too long
    postText.textProperty().addListener((obs, ov, nv) -> {
      boolean over = nv != null && nv.length() > Post.MAX_CONTENT_LENGTH;
      charCount.setStyle(over ? "-fx-text-fill: #d32f2f;" : "");
      postText.setStyle(over
          ? "-fx-background-insets: 0; -fx-background-color: white; -fx-border-color: #d32f2f; "
              + "-fx-border-width: 1; -fx-border-radius: 4;"
          : "");
    });

    // Make Enter press the publish button when its focused
    publishBtn.setOnKeyPressed(event -> {
      if (event.getCode() == KeyCode.ENTER) {
        publishBtn.fire();
      }
    });
  }

  // Method below is generated by openAI GPT-5 model. However, it is altered to
  // use our classes

  // This JavaDoc comment was generated by Github Copilot
  /** Publishes a new post if content is valid. */
  @FXML
  @SuppressWarnings("unused")
  private void publishPost() throws IOException {
    String content = postText.getText();

    if (content == null || content.isBlank()) {
      System.out.println("Content cannot be empty");
      return;
    }

    if (content.length() > Post.MAX_CONTENT_LENGTH) {
      System.out.println("Content too long (" + content.length() + ")");
      return;
    }

    postService.createPost(content, null);

    switchToFeed();
  }

  @FXML
  @SuppressWarnings("unused")
  private void switchToFeed() throws IOException {
    App.setRoot("feed.fxml");
  }
}
