package ui;

import core.Post;
import core.payload.response.PostResponse;
import javafx.fxml.FXMLLoader;
import javafx.scene.control.Alert;
import javafx.scene.control.Alert.AlertType;
import javafx.scene.control.ButtonType;
import javafx.scene.control.ListCell;
import javafx.scene.layout.HBox;

// This class is based on the example from this StackOverflow post:
// https://stackoverflow.com/a/77508842

// This JavaDoc comment was generated by Github Copilot
/**
 * Custom ListCell for displaying Post objects in a ListView. and binds data via
 * PostController.
 */
public class PostCell extends ListCell<PostResponse> {

  // Regular post view/controller
  private HBox regularNode;
  private PostController regularController;

  // Retweet view/controller
  private HBox retweetNode;
  private PostController retweetController;

  /**
   * Constructs a PostCell object.
   */
  public PostCell() { /* lazy-load in updateItem() to avoid exceptions at startup */
  }

  private void ensureRegularLoaded() {
    if (regularNode != null) {
      return;
    }
    try {
      FXMLLoader loader = new FXMLLoader(App.class.getResource("post.fxml"));
      loader.setControllerFactory(App.getSpringContext()::getBean);
      regularNode = loader.load();
      regularController = loader.getController();
    } catch (Exception e) {
      e.printStackTrace();
      new Alert(AlertType.ERROR, "Could not load post.fxml", ButtonType.OK).show();
    }
  }

  private void ensureRetweetLoaded() {
    if (retweetNode != null) {
      return;
    }
    try {
      FXMLLoader loader = new FXMLLoader(App.class.getResource("retweetPost.fxml"));
      loader.setControllerFactory(App.getSpringContext()::getBean);
      retweetNode = loader.load();
      retweetController = loader.getController();
    } catch (Exception e) {
      e.printStackTrace();
      new Alert(AlertType.ERROR, "Could not load retweetPost.fxml", ButtonType.OK).show();
    }
  }

  @Override
  protected void updateItem(PostResponse post, boolean empty) {
    super.updateItem(post, empty);

    // Remove default alternating color
    setStyle("-fx-background-color: transparent;");

    if (empty || post == null) {
      setText(null);
      setGraphic(null);
      return;
    }

    // Decide which template to use
    boolean isRetweet = post.type() == Post.Type.RETWEET;

    if (isRetweet) {
      ensureRetweetLoaded();
      if (retweetController != null) {
        retweetController.setData(post); // same controller class handles retweet layout
      }
      setGraphic(retweetNode);
    } else {
      ensureRegularLoaded();
      if (regularController != null) {
        regularController.setData(post);
      }
      setGraphic(regularNode);
    }
  }
}
