package ui;

import core.Post;
import core.payload.response.PostResponse;
import core.payload.response.UserResponse;
import core.util.NumberFormatter;
import java.io.IOException;
import java.util.Optional;
import javafx.beans.binding.BooleanBinding;
import javafx.fxml.FXML;
import javafx.scene.Node;
import javafx.scene.control.Button;
import javafx.scene.control.ButtonBar;
import javafx.scene.control.ButtonType;
import javafx.scene.control.Dialog;
import javafx.scene.control.Label;
import javafx.scene.control.TextArea;
import javafx.scene.image.ImageView;
import javafx.scene.layout.HBox;
import javafx.scene.layout.VBox;
import javafx.scene.text.Text;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.context.annotation.Scope;
import org.springframework.stereotype.Component;
import service.PostService;
import service.UserService;
import ui.util.AppIcons;

// This JavaDoc comment was generated by Github Copilot
/**
 * Controller for individual post UI component. Binds Post data to the post.fxml
 * labels.
 */
@Component
@Scope("prototype") // Tells springboot to create individual PostController class for posts
public class PostController {
  @Autowired
  private PostService postService;

  @Autowired
  private UserService userService;

  // -------- post.fxml (regular) --------
  @FXML
  private Label displayNameLabel;
  @FXML
  private Label usernameLabel;
  @FXML
  private Label contentLabel; // ALSO used by retweetPost.fxml as the *outer* (retweeter) message
  @FXML
  private ImageView likeImageView;
  @FXML
  @SuppressWarnings("unused")
  private ImageView retweetImageView;
  @FXML
  private Text likeBtnText;
  @FXML
  private Text retweetBtnText;
  @FXML
  @SuppressWarnings("unused")
  private Button deleteBtn; // delete for outer post / retweet

  // -------- retweetPost.fxml (outer retweet header) --------
  @FXML
  private Label displayNameLabelRetweet; // retweeter name
  @FXML
  private Label usernameLabelRetweet; // retweeter username

  // -------- retweetPost.fxml (inner original content) --------
  @FXML
  private Button retweetBtn;
  @FXML
  private Label contentLabel1; // original post content
  @FXML
  private Button deleteOriginalBtn; // delete for original post

  static final int MAX_MESSAGE_LEN = 280;

  private PostResponse currentPost;
  private PostResponse originalPost;

  private boolean isOwn(PostResponse post) {
    UserResponse me = userService.getLoggedInUser();
    return me != null && post != null && post.author() != null
        && me.id().equals(post.author().id());
  }

  // This JavaDoc comment was generated by Github Copilot
  /** Sets the Post data to the UI labels. */
  @FXML
  public void setData(PostResponse post) {
    this.currentPost = post;

    boolean isRetweet = post.type() == Post.Type.RETWEET;
    originalPost = isRetweet && post.originalPostId() != null
        ? postService.getPostById(post.originalPostId()).orElse(null)
        : null;

    boolean ownPost = isOwn(post);

    // ===== Outer delete button =====
    if (deleteBtn != null) {
      deleteBtn.setVisible(ownPost);
      deleteBtn.setManaged(ownPost);
    }

    if (likeBtnText != null) {
      likeBtnText.setText(NumberFormatter.formatCount(post.likes()));
      if (post.likedByUser(userService.getLoggedInUser().id())) {
        likeBtnText.setStyle("-fx-text-fill: #0078ae;");
        likeImageView.setImage(AppIcons.LIKE_ON);
      } else {
        likeBtnText.setStyle("-fx-text-fill: black;");
        likeImageView.setImage(AppIcons.LIKE_OFF);
      }
    }

    if (!isRetweet) {
      // ===== Regular post (post.fxml) =====
      displayNameLabel.setText(post.author().displayName());
      usernameLabel.setText("@" + post.author().username());
      contentLabel.setText(post.content());

      boolean own = isOwn(post);
      retweetBtnText.setText(NumberFormatter.formatCount(post.reTweets()));
      retweetBtn.setVisible(!own);
      retweetBtn.setManaged(!own);

      return;
    }

    boolean ownOriginal = originalPost != null && isOwn(originalPost);
    // ===== Inner original delete button =====
    if (deleteOriginalBtn != null) {
      deleteOriginalBtn.setVisible(ownOriginal);
      deleteOriginalBtn.setManaged(ownOriginal);
    }

    // Outer header: retweeter info
    displayNameLabelRetweet.setText(post.author().displayName());
    usernameLabelRetweet.setText("@" + post.author().username());

    // Outer message (retweeter's optional comment) goes into contentLabel
    String comment = post.content() == null ? "" : post.content();
    boolean show = !comment.isBlank();
    contentLabel.setText(comment);
    contentLabel.setVisible(show);
    contentLabel.setManaged(show); // collapse space when there is no comment

    // Inner original post content
    if (originalPost == null) {
      displayNameLabel.setVisible(false);
      usernameLabel.setVisible(false);
      contentLabel1.setText("Original post deleted");
    } else {
      displayNameLabel.setText(originalPost.author().displayName());
      usernameLabel.setText("@" + originalPost.author().username());
      contentLabel1.setText(originalPost.content());
    }
  }

  /**
   * Handles the "like" action, updating both the backend model and UI state.
   */
  @FXML
  public void updateLikes() {
    if (currentPost == null) {
      return;
    }

    currentPost = postService.likePost(currentPost.id());
    likeBtnText.setText(NumberFormatter.formatCount(currentPost.likes()));

    if (currentPost.likedByUser(userService.getLoggedInUser().id())) {
      likeBtnText.setStyle("-fx-text-fill: #0078ae;");
      likeImageView.setImage(AppIcons.LIKE_ON);
    } else {
      likeBtnText.setStyle("-fx-text-fill: black;");
      likeImageView.setImage(AppIcons.LIKE_OFF);

      postService.notifyPostUpdated();
    }
  }

  // Method below is generated by chatGPT
  /** Updates the retweet UI elements when the retweet button is pressed. */
  @FXML
  public void updateRetweets() {
    if (currentPost == null || retweetBtn == null) {
      return;
    }

    Dialog<String> dialog = new Dialog<>();
    dialog.setTitle("Retweet");
    dialog.setHeaderText("Add an optional message and confirm your retweet");

    ButtonType retweetBtnType = new ButtonType("Retweet", ButtonBar.ButtonData.OK_DONE);
    dialog.getDialogPane().getButtonTypes().addAll(retweetBtnType, ButtonType.CANCEL);

    TextArea messageArea = new TextArea();
    messageArea.setPromptText("Add a message (optional)");
    messageArea.setWrapText(true);
    messageArea.setPrefRowCount(3);

    Label counter = new Label();
    counter.textProperty().bind(javafx.beans.binding.Bindings.format("%d / %d",
        javafx.beans.binding.Bindings.length(messageArea.textProperty()), MAX_MESSAGE_LEN));
    BooleanBinding overLimit = javafx.beans.binding.Bindings.greaterThan(
        javafx.beans.binding.Bindings.length(messageArea.textProperty()), MAX_MESSAGE_LEN);
    counter.textFillProperty().bind(javafx.beans.binding.Bindings.when(overLimit)
        .then(javafx.scene.paint.Color.RED).otherwise(javafx.scene.paint.Color.GRAY));

    HBox counterBox = new HBox(counter);
    counterBox.setAlignment(javafx.geometry.Pos.BASELINE_RIGHT);
    counterBox.setPadding(new javafx.geometry.Insets(4, 0, 0, 0));

    VBox content = new VBox(8, messageArea, counterBox);
    content.setPrefWidth(420);
    dialog.getDialogPane().setContent(content);

    BooleanBinding isEmpty = javafx.beans.binding.Bindings.createBooleanBinding(
        () -> messageArea.getText().trim().isEmpty(), messageArea.textProperty());

    Node okButton = dialog.getDialogPane().lookupButton(retweetBtnType);
    okButton.disableProperty().bind(overLimit.or(isEmpty));

    javafx.application.Platform.runLater(messageArea::requestFocus);

    dialog.setResultConverter(btn -> (btn == retweetBtnType) ? messageArea.getText().trim() : null);

    Optional<String> result = dialog.showAndWait();
    result.ifPresent(this::onConfirmRetweetSafe);
  }

  private void onConfirmRetweetSafe(String msg) {
    UserResponse user = userService.getLoggedInUser();

    if (user.id().equals(currentPost.author().id())) {
      return;
    }

    if (msg == null) {
      msg = " ";
    }

    postService.createPost(msg, currentPost.id());

    if (retweetBtn != null) {
      retweetBtn.setText(currentPost.reTweets() + " 🔄");
      retweetBtn.setStyle("-fx-text-fill: cyan;");
    }

    try {
      App.setRoot("feed.fxml");
    } catch (IOException e) {
      e.printStackTrace();
    }
  }

  /**
   * Handles the deletion of a post based on the user's confirmation.
   * 
   * <p>
   * This method is triggered by a delete action event and determines which post
   * (current or original) to delete based on the source of the event. It displays
   * a confirmation dialog to the user, and if confirmed, deletes the selected
   * post using the {@code postService}.
   * </p>
   *
   * @param event the action event triggered by the delete button
   */
  @FXML
  public void deletePostAction(javafx.event.ActionEvent event) {
    PostResponse postToDelete = null;

    Object source = event.getSource();
    if (source == deleteBtn) {
      postToDelete = currentPost;
    } else if (source == deleteOriginalBtn) {
      postToDelete = originalPost;
    }

    if (postToDelete == null) {
      return;
    }

    Dialog<ButtonType> dialog = new Dialog<>();
    dialog.setTitle("Delete Post");
    dialog.setHeaderText("Are you sure you want to delete this post?");
    dialog.getDialogPane().getButtonTypes().addAll(ButtonType.YES, ButtonType.CANCEL);

    Optional<ButtonType> result = dialog.showAndWait();
    if (result.isPresent() && result.get() == ButtonType.YES) {
      postService.deletePost(postToDelete.id());

      // Update inner content if original post deleted
      if (postToDelete == originalPost && contentLabel1 != null) {
        contentLabel1.setText("Original post deleted");
      }

      postService.notifyPostUpdated();
    }
  }
}
